--- a/GUI/Charge_generator/mainwindow.ui
+++ b/GUI/Charge_generator/mainwindow.ui
@@ -1887,7 +1887,7 @@ background-color: rgb(177, 177, 177);
 border:1px solid rgb(255, 255, 255);</string>
       </property>
       <property name="text">
-       <string>Gerar tráfego para o NS3</string>
+       <string>Gerar tráfego</string>
       </property>
      </widget>
      <widget class="QWidget" name="analiseEstatIOT" native="true">
